<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Messenger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone number</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="auth_desc">Please confirm your country code and enter your phone number.</string>
    <string name="accept_desc">We`we sent an SMS with an activation code to your phone </string>
    <string name="enter_code">Enter code</string>
    <string name="first_name_required">First name (required)</string>
    <string name="second_name_optional">Second name (optional)</string>
    <string name="username_desc">Enter your name and add a profile picture.</string>
    <string name="profile_info">Profile info</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="uid">uid</string>
    <string name="skip">Skip</string>
    <string name="title">Title</string>
    <string name="desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="get_started">Get started</string>
    <string name="message">message</string>
</resources>