<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:text="@string/your_phone_number"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_auth_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_auth_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="@string/auth_desc"
        android:textColor="@color/gray_font"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/ccp_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginBottom="16sp"
        android:background="@drawable/bg_et"
        app:layout_constraintBottom_toTopOf="@id/et_phone_number" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:background="@drawable/bg_et"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="8dp"
        android:textColorHint="@color/gray_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_send_sms"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:src="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>